update the donations tags
